--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.contact{
+.contact {
   background-image: url('/images/contact\ form\ shapes-mobile@2x.svg'), url('images/Contact\ me.svg');
   background-repeat: no-repeat, no-repeat;
   background-size: 265px 709px, 375px 779px;
@@ -11,13 +11,14 @@
   justify-content: center;
   align-items: center;
 }
+
 .contact-text {
   font-size: 40px;
   font-weight: 700;
-  font-family: 'poppins';
+  font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
   line-height: 52px;
-  color: #ffffff;
+  color: #fff;
   margin-bottom: 10px;
   margin-left: 50px;
   margin-top: 130px;
@@ -30,7 +31,7 @@
 .par-contact {
   font-size: 20px;
   font-weight: 400;
-  font-family: 'poppins';
+  font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
   line-height: 28px;
   color: #ebebff;
@@ -43,25 +44,25 @@
   height: 48px;
   border-radius: 8px;
   border: 1px solid #cfd8dc;
-  background: #ffffff;
+  background: #fff;
   padding-left: 10px;
 }
 
 .mail {
-    width: 327px;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #cfd8dc;
-    background: #ffffff;
-    padding-left: 10px;
-
+  width: 327px;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid #cfd8dc;
+  background: #fff;
+  padding-left: 10px;
 }
 
 .msg {
+  color: #b3bac5;
   width: 327px;
   height: 170px;
   border: 1px solid #cfd8dc;
-  background: #ffffff;
+  background: #fff;
   border-radius: 8px;
   padding-left: 10px;
   padding-top: 15px;
@@ -72,24 +73,18 @@
   justify-content: center;
 }
 
-.button {
-  width: 140px;
-  height: 48px;
+.btn {
+  background: #fff;
+  padding: 8px 12px;
+  width: 130px;
+  border-radius: 8px;
+  border: none;
   color: #6070ff;
   font-size: 17px;
   font-weight: 500;
-  font-family: 'poppins';
+  font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
-  line-height: 24px;
-  letter-spacing: 0.03px;
-  text-align: center;
-  border-radius: 8px;
-  border: 0px;
-  margin-right: 40px;
-  align-self: center;
-  justify-self: center;
 }
-
 
 form {
   margin: 0 auto;
@@ -108,7 +103,6 @@ form li + li {
   margin-top: 1em;
 }
 
-
 input,
 textarea {
   font: 1em sans-serif;
@@ -117,23 +111,15 @@ textarea {
   border: 1px solid #999;
 }
 
-input:focus,
-textarea:focus {
-  border-color: #000;
-}
-
 textarea {
   vertical-align: top;
   height: 5em;
 }
 
-.button {
-  padding-left: 90px; 
-}
-
 button {
   margin-left: 0.5em;
 }
+
 .logo {
   width: 76px;
   height: 20px;
@@ -150,11 +136,21 @@ button {
   order: 0;
   flex-grow: 0;
 }
+
+.shapes {
+  background-image: url('shapes/i-bttn/background-shapes/header-shapes\ mobile.png');
+  background-repeat: no-repeat;
+  background-size: 380px 515.15px;
+  width: 375px;
+  height: 418px;
+  margin-top: 0;
+  padding-top: 0;
+}
 a { text-decoration: none; }
 
 .tex {
   width: 327px;
-  height: 150px;
+  height: 100px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -166,6 +162,7 @@ a { text-decoration: none; }
   flex: none;
   order: 0;
   flex-grow: 0;
+  margin-bottom: 20px;
 }
 
 .icons {
@@ -221,14 +218,14 @@ a { text-decoration: none; }
 }
 
 .bttn {
+  display: flex;
   width: 18px;
   height: 12px;
   top: 6px;
   left: 3px;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 25px;
+  margin: 8px;
 }
 
 .header-section {
@@ -236,7 +233,8 @@ a { text-decoration: none; }
   width: 350px;
   display: flex;
   justify-content: space-between;
-  margin: 24px;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .container {
@@ -344,6 +342,7 @@ a { text-decoration: none; }
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
+  margin-bottom: 20px;
 }
 
 .section6 {
