--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+
 .contact {
-  background-image: url('/images/contact\ form\ shapes-mobile@2x.svg'), url('images/Contact\ me.svg');
-  background-repeat: no-repeat, no-repeat;
-  background-size: 265px 709px, 375px 779px;
-  background-position: 130px, center;
-  width: 375px;
-  height: 779px;
+  background-color:  #6070FF;
+  background-image: url('/images/header-shapes\ mobile@2x.svg');
+  background-repeat: no-repeat;
+  background-size: 100% ;
+  background-position: center;
+  width: 100%;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -74,6 +75,10 @@
 }
 
 .btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   background: #fff;
   padding: 8px 12px;
   width: 130px;
@@ -138,10 +143,10 @@ button {
 }
 
 .shapes {
-  background-image: url('shapes/i-bttn/background-shapes/header-shapes\ mobile.png');
+  background-image: url('shapes/i-bttn/background-shapes/Header\ bg@2x.png');
   background-repeat: no-repeat;
-  background-size: 380px 515.15px;
-  width: 375px;
+  background-size: 100%;
+  width: 100%;
   height: 418px;
   margin-top: 0;
   padding-top: 0;
@@ -170,15 +175,30 @@ a { text-decoration: none; }
   margin: 0;
   justify-content: space-between;
   display: flex;
-  width: 50%;
+  width: 20%;
 }
 
 .icon {
   justify-content: space-between;
 }
-
+#btn{
+  font-family: 'Poppins', Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffff;
+  padding: 12px;
+  background:#4053FC;;
+  border: 1px solid #396df2;
+  border-radius: 12px;
+  margin: 15px 0;
+}
 .head-section {
-  width: 327px;
+  width: 100%;
   height: 146px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -205,13 +225,7 @@ a { text-decoration: none; }
   flex-grow: 0;
 }
 
-.background-image {
-  position: absolute;
-  width: 462px;
-  height: 587.15px;
-  left: -34px;
-  top: 104px;
-}
+
 
 .line {
   border: 1px solid #6070ff;
@@ -225,22 +239,18 @@ a { text-decoration: none; }
   left: 3px;
   flex-direction: column;
   justify-content: space-between;
-  margin: 8px;
+  margin: 0 20px;
 }
 
 .header-section {
-  height: 1px;
-  width: 350px;
+  width: 100%;
+  height: 10px;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
+  margin-bottom: 50px;
+  margin-top: 0px;
+  padding-top: 0px;
 
-.container {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: repeat(5, auto);
 }
 
 .card_item {
@@ -331,6 +341,9 @@ a { text-decoration: none; }
 }
 
 .main-section {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 100%;
   align-items: center;
   padding-left: 10px;
   font-family: 'Poppins', Arial, sans-serif;
@@ -500,4 +513,72 @@ a { text-decoration: none; }
   justify-content: space-between;
   list-style: none;
   padding: 0;
+}
+
+
+@media  screen and (min-width:620px) {
+ 
+}
+@media screen and (min-width:1200px) {
+  .header-section{
+    width: 100%;
+  }
+  .contact {
+    background-color:  #6070FF;
+    background-image: url('/images/header-shapes\ mobile@2x.svg');
+    background-repeat: no-repeat;
+    background-size: 100% ;
+    background-position: center;
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+.main-section{
+  grid-column: 8 ;
+}
+  .snap{
+    display: flex;
+      justify-content: center;
+      padding: 50px 0;
+      gap: 35px;
+      width: 100%;
+      margin: auto;
+      border-radius: 24px;
+      margin-top: 20px;
+  
+  }
+  .shapes{
+    width: 60%;
+    margin-left: 13%;
+    margin-top: 5%;
+    margin-right: 20%;
+  }
+  .main{
+    background-size: cover;
+    width: 100%;
+  }
+  .name {
+    width: 45%;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+    height: 48px;
+    justify-content: center;
+    align-content: center;
+    margin-left: 25%;
+  }
+
+  .msg {
+    width: 45%;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+    height: 170px;
+    margin-left: 25%;
+  }
+
+  .btn {
+    margin-left: 40%;
+  }
 }
