--- a/style.css
+++ b/style.css
@@ -192,11 +192,17 @@ a { text-decoration: none; }
   letter-spacing: 0.03em;
   color: #ffff;
   padding: 12px;
-  background:#4053FC;;
+  background:#4053FC;
   border: 1px solid #396df2;
   border-radius: 12px;
   margin: 15px 0;
 }
+
+#btn:hover {
+  transition: all 0.3s;
+  background: #7f8cff;
+}
+
 .head-section {
   width: 100%;
   height: 146px;
@@ -471,6 +477,7 @@ a { text-decoration: none; }
   border: 1px solid #396df2;
   border-radius: 12px;
   margin: 15px 0;
+  transition: all 0.5s;
 }
 
 #bttn:active {
