--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .contact {
-  background-color:  #6070FF;
+  background-color: #6070ff;
   background-image: url('/images/header-shapes\ mobile@2x.svg');
   background-repeat: no-repeat;
-  background-size: 100% ;
+  background-size: 100%;
   background-position: center;
   width: 100%;
   margin-top: 50px;
@@ -181,7 +187,8 @@ a { text-decoration: none; }
 .icon {
   justify-content: space-between;
 }
-#btn{
+
+#btn {
   font-family: 'Poppins', Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -192,11 +199,12 @@ a { text-decoration: none; }
   letter-spacing: 0.03em;
   color: #ffff;
   padding: 12px;
-  background:#4053FC;;
+  background: #4053fc;
   border: 1px solid #396df2;
   border-radius: 12px;
   margin: 15px 0;
 }
+
 .head-section {
   width: 100%;
   height: 146px;
@@ -225,8 +233,6 @@ a { text-decoration: none; }
   flex-grow: 0;
 }
 
-
-
 .line {
   border: 1px solid #6070ff;
 }
@@ -248,9 +254,8 @@ a { text-decoration: none; }
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
-  margin-top: 0px;
-  padding-top: 0px;
-
+  margin-top: 0;
+  padding-top: 0;
 }
 
 .card_item {
@@ -450,12 +455,6 @@ a { text-decoration: none; }
   display: inline;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 #bttn {
   font-family: 'Poppins', Arial, sans-serif;
   font-style: normal;
@@ -515,19 +514,22 @@ a { text-decoration: none; }
   padding: 0;
 }
 
-
-@media  screen and (min-width:620px) {
- 
+@media screen and (min-width: 620px) {
+  header {
+    display: none;
+  }
 }
-@media screen and (min-width:1200px) {
-  .header-section{
+
+@media screen and (min-width: 1200px) {
+  .header-section {
     width: 100%;
   }
+
   .contact {
-    background-color:  #6070FF;
+    background-color: #6070ff;
     background-image: url('/images/header-shapes\ mobile@2x.svg');
     background-repeat: no-repeat;
-    background-size: 100% ;
+    background-size: 70%;
     background-position: center;
     width: 100%;
     margin-top: 50px;
@@ -536,49 +538,89 @@ a { text-decoration: none; }
     justify-content: center;
     align-items: center;
   }
-.main-section{
-  grid-column: 8 ;
-}
-  .snap{
-    display: flex;
-      justify-content: center;
-      padding: 50px 0;
-      gap: 35px;
-      width: 100%;
-      margin: auto;
-      border-radius: 24px;
-      margin-top: 20px;
-  
+
+  .main-section {
+    grid-column: 8;
   }
-  .shapes{
+
+  .shapes {
     width: 60%;
     margin-left: 13%;
     margin-top: 5%;
     margin-right: 20%;
   }
-  .main{
+
+  .main {
     background-size: cover;
     width: 100%;
   }
+
+  .multi {
+    justify-content: right;
+  }
+
+  .card_item {
+    background-position: center;
+    width: 100%;
+    margin-top: 50px;
+    border: 1px solid rgb(241, 234, 234);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 24px;
+  }
+
+  .section6 {
+    width: 40%;
+    height: auto;
+    background: #fff;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    border: 1px solid rgb(241, 234, 234);
+    border-radius: 10px;
+    font-family: 'Poppins', Arial, sans-serif;
+  }
+
+  .social {
+    justify-content: space-between;
+    display: flex;
+    width: 50%;
+  }
+
   .name {
-    width: 45%;
+    width: 90%;
     border: 1px solid #cfd8dc;
     border-radius: 2px;
     height: 48px;
     justify-content: center;
     align-content: center;
-    margin-left: 25%;
+    margin-left: 5%;
+  }
+
+  .mail {
+    width: 90%;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+    height: 48px;
+    justify-content: center;
+    align-content: center;
+    margin-left: 5%;
   }
 
   .msg {
-    width: 45%;
+    justify-content: center;
+    width: 65%;
     border: 1px solid #cfd8dc;
     border-radius: 2px;
     height: 170px;
-    margin-left: 25%;
+    margin-left: 5%;
   }
 
   .btn {
-    margin-left: 40%;
+    margin-left: 20%;
   }
 }
