--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
-  width: 100%;
+  width: 80%;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@
 }
 
 .par-container {
-  width: 327px;
+  width: 527px;
 }
 
 .par-contact {
@@ -152,10 +152,11 @@ button {
   background-image: url('shapes/i-bttn/background-shapes/Header\ bg@2x.png');
   background-repeat: no-repeat;
   background-size: 100%;
-  width: 100%;
+  width: 10%;
   height: 418px;
   margin-top: 0;
   padding-top: 0;
+  border-bottom-left-radius: 80px 80px;
 }
 a { text-decoration: none; }
 
@@ -164,7 +165,7 @@ a { text-decoration: none; }
   height: 100px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 900;
   font-size: 40px;
   line-height: 52px;
   display: flex;
@@ -217,8 +218,12 @@ a { text-decoration: none; }
   flex: none;
   order: 1;
   flex-grow: 0;
+  margin-bottom: 0px;
 }
-
+.connect{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .lets {
   width: 117px;
   height: 24px;
@@ -231,6 +236,8 @@ a { text-decoration: none; }
   flex: none;
   order: 0;
   flex-grow: 0;
+  margin-bottom: 0%;
+  margin-top: 0%;
 }
 
 .line {
@@ -257,21 +264,29 @@ a { text-decoration: none; }
   margin-top: 0;
   padding-top: 0;
 }
+.nav-list{
+  display:inline-flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: flex-end;
 
+}
 .card_item {
   border: 1px solid rgb(241, 234, 234);
   border-radius: 10px;
   padding: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
   margin-bottom: 24px;
 }
 
 .snap {
+  display: flex;
+  flex-direction: row;
   width: 295px;
   height: 220px;
-  background: url(images/Snapshoot_Portfolio.png);
+  background: url('images/Snapshoot_Portfolio.png');
   border-radius: 8px;
   flex: none;
   order: 0;
@@ -295,10 +310,10 @@ a { text-decoration: none; }
 }
 
 .list {
-  list-style: none;
   display: flex;
+  list-style: none;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   margin-bottom: 20px;
   padding-right: 20px;
   gap: 1rem;
@@ -368,14 +383,15 @@ a { text-decoration: none; }
   height: auto;
   background: #fff;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  flex-direction: row;
   padding: 16px;
   border: 1px solid rgb(241, 234, 234);
   border-radius: 10px;
   font-family: 'Poppins', Arial, sans-serif;
+  margin-left: 0px;
+  margin-right: 0px;
 }
-
 .la {
   font-family: 'Poppins', Arial, sans-serif;
   font-style: normal;
@@ -613,7 +629,7 @@ a { text-decoration: none; }
 
   .msg {
     justify-content: center;
-    width: 65%;
+    width: 90%;
     border: 1px solid #cfd8dc;
     border-radius: 2px;
     height: 170px;
