--- a/style.css
+++ b/style.css
@@ -1,138 +1,5 @@
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-.contact {
-  background-color: #6070ff;
-  background-image: url('/images/header-shapes\ mobile@2x.svg');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  width: 80%;
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-text {
-  font-size: 40px;
-  font-weight: 700;
-  font-family: 'poppins', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  line-height: 52px;
-  color: #fff;
-  margin-bottom: 10px;
-  margin-left: 50px;
-  margin-top: 130px;
-}
-
-.par-container {
-  width: 527px;
-}
-
-.par-contact {
-  font-size: 20px;
-  font-weight: 400;
-  font-family: 'poppins', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  line-height: 28px;
-  color: #ebebff;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.name {
-  width: 327px;
-  height: 48px;
-  border-radius: 8px;
-  border: 1px solid #cfd8dc;
-  background: #fff;
-  padding-left: 10px;
-}
-
-.mail {
-  width: 327px;
-  height: 48px;
-  border-radius: 8px;
-  border: 1px solid #cfd8dc;
-  background: #fff;
-  padding-left: 10px;
-}
-
-.msg {
-  color: #b3bac5;
-  width: 327px;
-  height: 170px;
-  border: 1px solid #cfd8dc;
-  background: #fff;
-  border-radius: 8px;
-  padding-left: 10px;
-  padding-top: 15px;
-}
-
-.but-container {
-  display: flex;
-  justify-content: center;
-}
-
-.btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background: #fff;
-  padding: 8px 12px;
-  width: 130px;
-  border-radius: 8px;
-  border: none;
-  color: #6070ff;
-  font-size: 17px;
-  font-weight: 500;
-  font-family: 'poppins', Arial, Helvetica, sans-serif;
-  font-style: normal;
-}
-
-form {
-  margin: 0 auto;
-  width: 375px;
-  padding: 1em;
-  border-radius: 1em;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-form li + li {
-  margin-top: 1em;
-}
-
-input,
-textarea {
-  font: 1em sans-serif;
-  width: 300px;
-  box-sizing: border-box;
-  border: 1px solid #999;
-}
-
-textarea {
-  vertical-align: top;
-  height: 5em;
-}
-
-button {
-  margin-left: 0.5em;
-}
-
-.logo {
-  width: 76px;
+.logo {width: 76px;
   height: 20px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -147,25 +14,14 @@ button {
   order: 0;
   flex-grow: 0;
 }
-
-.shapes {
-  background-image: url('shapes/i-bttn/background-shapes/Header\ bg@2x.png');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 10%;
-  height: 418px;
-  margin-top: 0;
-  padding-top: 0;
-  border-bottom-left-radius: 80px 80px;
-}
 a { text-decoration: none; }
 
 .tex {
   width: 327px;
-  height: 100px;
+  height: 150px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: 900;
+  font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   display: flex;
@@ -174,7 +30,6 @@ a { text-decoration: none; }
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin-bottom: 20px;
 }
 
 .icons {
@@ -182,32 +37,15 @@ a { text-decoration: none; }
   margin: 0;
   justify-content: space-between;
   display: flex;
-  width: 20%;
+  width: 50%;
 }
 
 .icon {
   justify-content: space-between;
 }
 
-#btn {
-  font-family: 'Poppins', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #ffff;
-  padding: 12px;
-  background: #4053fc;
-  border: 1px solid #396df2;
-  border-radius: 12px;
-  margin: 15px 0;
-}
-
 .head-section {
-  width: 100%;
+  width: 327px;
   height: 146px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -218,12 +56,6 @@ a { text-decoration: none; }
   flex: none;
   order: 1;
   flex-grow: 0;
-  margin-bottom: 0;
-}
-
-.connect {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .lets {
@@ -238,8 +70,14 @@ a { text-decoration: none; }
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin-bottom: 0%;
-  margin-top: 0%;
+}
+
+.background-image {
+  position: absolute;
+  width: 462px;
+  height: 587.15px;
+  left: -34px;
+  top: 104px;
 }
 
 .line {
@@ -247,31 +85,28 @@ a { text-decoration: none; }
 }
 
 .bttn {
-  display: flex;
   width: 18px;
   height: 12px;
   top: 6px;
   left: 3px;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 20px;
+  margin: 25px;
 }
 
 .header-section {
-  width: 100%;
-  height: 10px;
+  height: 1px;
+  width: 350px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 50px;
-  margin-top: 0;
-  padding-top: 0;
+  margin: 24px;
 }
 
-.nav-list {
-  display: inline-flex;
-  flex-direction: row;
-  gap: 10px;
-  justify-content: flex-end;
+.container {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(5, auto);
 }
 
 .card_item {
@@ -279,17 +114,15 @@ a { text-decoration: none; }
   border-radius: 10px;
   padding: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   margin-bottom: 24px;
 }
 
 .snap {
-  display: flex;
-  flex-direction: row;
   width: 295px;
   height: 220px;
-  background: url('images/Snapshoot_Portfolio.png');
+  background: url(images/Snapshoot_Portfolio.png);
   border-radius: 8px;
   flex: none;
   order: 0;
@@ -313,10 +146,10 @@ a { text-decoration: none; }
 }
 
 .list {
-  display: flex;
   list-style: none;
+  display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   margin-bottom: 20px;
   padding-right: 20px;
   gap: 1rem;
@@ -364,9 +197,6 @@ a { text-decoration: none; }
 }
 
 .main-section {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  width: 100%;
   align-items: center;
   padding-left: 10px;
   font-family: 'Poppins', Arial, sans-serif;
@@ -378,22 +208,19 @@ a { text-decoration: none; }
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
-  margin-bottom: 20px;
 }
 
 .section6 {
   width: 375px;
-  height: auto;
+  height: 1000px;
   background: #fff;
   box-sizing: border-box;
-  display: inline-block;
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   padding: 16px;
   border: 1px solid rgb(241, 234, 234);
   border-radius: 10px;
   font-family: 'Poppins', Arial, sans-serif;
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .la {
@@ -473,6 +300,14 @@ a { text-decoration: none; }
   background: #ebebff;
   border-radius: 8px;
   display: inline;
+  
+
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 #bttn {
@@ -532,115 +367,7 @@ a { text-decoration: none; }
   justify-content: space-between;
   list-style: none;
   padding: 0;
-}
-
-@media screen and (min-width: 620px) {
-  header {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .header-section {
-    width: 100%;
-  }
-
-  .contact {
-    background-color: #6070ff;
-    background-image: url('/images/header-shapes\ mobile@2x.svg');
-    background-repeat: no-repeat;
-    background-size: 70%;
-    background-position: center;
-    width: 100%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .main-section {
-    grid-column: 8;
-  }
-
-  .shapes {
-    width: 60%;
-    margin-left: 13%;
-    margin-top: 5%;
-    margin-right: 20%;
-  }
-
-  .main {
-    background-size: cover;
-    width: 100%;
-  }
-
-  .multi {
-    justify-content: right;
-  }
-
-  .card_item {
-    background-position: center;
-    width: 100%;
-    margin-top: 50px;
-    border: 1px solid rgb(241, 234, 234);
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 24px;
-  }
-
-  .section6 {
-    width: 40%;
-    height: auto;
-    background: #fff;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
-    border: 1px solid rgb(241, 234, 234);
-    border-radius: 10px;
-    font-family: 'Poppins', Arial, sans-serif;
-  }
-
-  .social {
-    justify-content: space-between;
-    display: flex;
-    width: 50%;
-  }
-
-  .name {
-    width: 90%;
-    border: 1px solid #cfd8dc;
-    border-radius: 2px;
-    height: 48px;
-    justify-content: center;
-    align-content: center;
-    margin-left: 5%;
-  }
-
-  .mail {
-    width: 90%;
-    border: 1px solid #cfd8dc;
-    border-radius: 2px;
-    height: 48px;
-    justify-content: center;
-    align-content: center;
-    margin-left: 5%;
-  }
-
-  .msg {
-    justify-content: center;
-    width: 90%;
-    border: 1px solid #cfd8dc;
-    border-radius: 2px;
-    height: 170px;
-    margin-left: 5%;
-  }
-
-  .btn {
-    margin-left: 20%;
-  }
+  float:right;
+  padding-left: 5px;
+  
 }
