--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
-.logo {width: 76px;
+.logo {
+  width: 76px;
   height: 20px;
   font-family: 'poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -300,8 +301,6 @@ a { text-decoration: none; }
   background: #ebebff;
   border-radius: 8px;
   display: inline;
-  
-
 }
 
 * {
@@ -367,7 +366,6 @@ a { text-decoration: none; }
   justify-content: space-between;
   list-style: none;
   padding: 0;
-  float:right;
+  float: right;
   padding-left: 5px;
-  
 }
